--- a/src/app/pages/remote-call-activation/route-plan/route-plan.component.html
+++ b/src/app/pages/remote-call-activation/route-plan/route-plan.component.html
@@ -35,7 +35,7 @@
               <div fxLayout="row" fxFlex="20" class="p-24">
                 <mat-form-field fxFlex="100" class="is-light form-primary">
                   <mat-select placeholder="Position Code" [formControl]="positionCode">
-                    <mat-option *ngFor="let item of positionCodesList" [value]="item.id">{{item.name}}</mat-option>
+                    <mat-option *ngFor="let item of positionCodesList" [value]="item.id">{{item.code}}</mat-option>
                   </mat-select>
                 </mat-form-field>
               </div>
@@ -75,51 +75,25 @@
               </mat-progress-bar>
               <ngx-datatable class="material" style="border-top: 1px solid #e3e3e3" [rows]="rows"
                 [loadingIndicator]="loadingIndicator" [columnMode]="'force'" [headerHeight]="48" [footerHeight]="56"
-                [rowHeight]="auto" [scrollbarH]="true" [offset]="offsetPagination" [reorderable]="reorderable"
-                [count]="pagination.total" [limit]="pagination.per_page" [externalPaging]="true"
-                [externalSorting]="true" (page)="setPage($event)" (sort)="onSort($event)">
-                <!-- <ngx-datatable-column name="Retailer Id" prop="id" [sortable]="false"></ngx-datatable-column>
-                <ngx-datatable-column name="Customer Code" prop="code" [sortable]="false"></ngx-datatable-column>
-                <ngx-datatable-column name="Nama Retailer" prop="name"></ngx-datatable-column>
-                <ngx-datatable-column name="Area" prop="area_code" [sortable]="false"></ngx-datatable-column>
-                <ngx-datatable-column name="Region" prop="region_code" [sortable]="false"></ngx-datatable-column>
-                <ngx-datatable-column name="Division" prop="division_code" [sortable]="false"></ngx-datatable-column>
-                <ngx-datatable-column name="IR Check" prop="ir_verification" [sortable]="false"></ngx-datatable-column>
-                <ngx-datatable-column name="Status Misi" prop="status_misi" [sortable]="false"></ngx-datatable-column>
-                <ngx-datatable-column name="Status Coin" prop="status_coin" [sortable]="false"></ngx-datatable-column>
-                <ngx-datatable-column name="Tanggal Submit Misi" [sortable]="false" [width]="180">
-                  <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-                    <span *ngIf="row.tgl_submit_misi !== null">{{row.tgl_submit_misi.date | date: 'dd/MM/yyy HH:mm'}}
-                      WIB</span>
+                [scrollbarH]="true" [offset]="offsetPagination" [reorderable]="reorderable" [count]="pagination.total"
+                [limit]="pagination.per_page" [externalPaging]="true" [externalSorting]="true" (page)="setPage($event)"
+                (sort)="onSort($event)">
+                <ngx-datatable-column name="Hari Kunjungan" prop="kunjungan">
+                  <ng-template ngx-datatable-cell-template let-value="value" let-row="row">
+                    <span style="text-transform: capitalize;">{{row.kunjungan}}</span>
                   </ng-template>
                 </ngx-datatable-column>
-                <ngx-datatable-column name="Action" [sortable]="false">
-                  <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-                    <div class="button-row" style="margin-left: -10px">
-                      <button type="button" mat-icon-button matTooltip="Verifikasi Misi"
-                        (click)="openConfirmDialog(row, 'Verifikasi Misi')"
-                        [disabled]="row.status_misi == 'not-submitted' || row.status_misi !== 'submitted' && row.status_coin !== 'belum dikirim' || row.status_coin == 'sudah dikirim' || !permissionVerifikasiMisi?.ubah">
-                        <mat-icon
-                          *ngIf="row.status_misi == 'submitted' && row.status_coin !== 'sudah dikirim' && permissionVerifikasiMisi?.ubah || row.status_misi !== 'not-submitted' && row.status_coin == 'belum dikirim' && permissionVerifikasiMisi?.ubah"
-                          class="orange-500-fg">assignment_turned_in</mat-icon>
-                        <mat-icon
-                          *ngIf="row.status_misi == 'not-submitted' || row.status_misi !== 'submitted' && row.status_coin !== 'belum dikirim' || row.status_coin == 'sudah dikirim' || !permissionVerifikasiMisi?.ubah"
-                          class="secondary-text">assignment_turned_in</mat-icon>
-                      </button>
-    
-                      <button type="button" mat-icon-button matTooltip="Release Coin"
-                        (click)="openConfirmDialog(row, 'Release Coin')"
-                        [disabled]="row.status_misi !== 'approved' || row.status_coin == 'sudah dikirim' || !permissionReleaseCoin?.ubah">
-                        <mat-icon
-                          *ngIf="row.status_misi == 'approved' && row.status_coin !== 'sudah dikirim' && permissionReleaseCoin?.ubah"
-                          class="orange-500-fg">call_made</mat-icon>
-                        <mat-icon
-                          *ngIf="row.status_misi !== 'approved' || row.status_coin == 'sudah dikirim' || !permissionReleaseCoin?.ubah"
-                          class="secondary-text">call_made</mat-icon>
-                      </button>
-                    </div>
-                  </ng-template>
-                </ngx-datatable-column> -->
+                <ngx-datatable-column name="Position Code" prop="position_code" [sortable]="false">
+                </ngx-datatable-column>
+                <ngx-datatable-column name="Customer Name" prop="owner"></ngx-datatable-column>
+                <ngx-datatable-column name="Customer Code" prop="code" [sortable]="false"></ngx-datatable-column>
+                <ngx-datatable-column name="Territory Code" prop="territory_code" [sortable]="false">
+                </ngx-datatable-column>
+                <ngx-datatable-column name="Classification" prop="classification" [sortable]="false">
+                </ngx-datatable-column>
+                <ngx-datatable-column name="City" prop="division_code" [sortable]="false"></ngx-datatable-column>
+                <ngx-datatable-column name="District" prop="district_code" [sortable]="false"></ngx-datatable-column>
+                <ngx-datatable-column name="Village" prop="village" [sortable]="false"></ngx-datatable-column>
               </ngx-datatable>
             </div>
           </div>
@@ -136,8 +110,8 @@
                 </thead>
                 <tbody>
                   <tr *ngFor="let summary of summaries">
-                    <td>Dom</td>
-                    <td>6000</td>
+                    <td style="text-transform: capitalize;">{{summary.kunjungan}}</td>
+                    <td>{{ summary.total | rupiahFormaterWithoutRp }}</td>
                   </tr>
                   <tr class="active-row" *ngIf="summaries.length === 0">
                     <td colspan="2" style="text-align: center;">No Data to Display ...</td>
