--- a/src/app/pages/dte/trade/edit/trade-edit.component.html
+++ b/src/app/pages/dte/trade/edit/trade-edit.component.html
@@ -44,7 +44,7 @@
               </div>
             </div>
             <div *ngIf="!files && detailFormTrade.image_url">
-              <img class="previewBanner" [src]="detailFormTrade.image_url">
+              <img id="previewBanner" class="previewBanner" [src]="detailFormTrade.image_url">
             </div>
           </div>
           <div fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="60px" fxLayoutGap.lt-md="0px">
