--- a/src/app/pages/b2c-voucher/create/b2c-voucher-create.component.html
+++ b/src/app/pages/b2c-voucher/create/b2c-voucher-create.component.html
@@ -30,6 +30,13 @@
                     Nama Voucher harus diisi.
                   </mat-error>
                 </mat-form-field>
+                <mat-form-field fxFlex="50" class="is-light">
+                  <input matInput type="text" placeholder="Nama Lain Voucher" formControlName="alias">
+                  <mat-error
+                    *ngIf="formDetailVoucher.controls['alias'].hasError('required') && formDetailVoucher.controls['alias'].touched ">
+                    Nama Lain Voucher harus diisi.
+                  </mat-error>
+                </mat-form-field>
                 <div fxLayout="row" fxFlex="50" fxLayoutGap="20px">
                   <mat-form-field class="is-light" fxFlex="45%">
                     <input matInput type="number" placeholder="Nilai Voucher" formControlName="voucherValue">
