--- a/src/app/pages/kpi-setting/component/edit-kpi-setting.component.html
+++ b/src/app/pages/kpi-setting/component/edit-kpi-setting.component.html
@@ -8,14 +8,16 @@
         <form [formGroup]="formKPI">
           <div class="ayo-top px-24" fxLayout="row" fxLayoutAlign="space-between center">
             <h3 class="font-weight-700">Edit KPI Group</h3>
-            <button *ngIf="enableEdit"
+            <!-- <button *ngIf="enableEdit" -->
+            <button 
               mat-raised-button type="button" color="primary" (click)="addKPI()">
               <mat-icon>add</mat-icon>
             </button>
           </div>
           <div class="ayo-middle pt-24" fxLayout="column">
             <mat-form-field fxLayout="row wrap" class="is-light form-primary">
-              <mat-select placeholder="Start KPS" formControlName="start_kps" [disabled]="!enableEdit">
+              <mat-select placeholder="Start KPS" formControlName="start_kps">
+                <!-- [disabled]="!enableEdit"> -->
                 <mat-option *ngFor="let item of KPSList" [value]="item.id">{{item.kps_number}} ({{item.start_date  | date:'dd/MM/yyyy'}})
                 </mat-option>
               </mat-select>
@@ -24,7 +26,8 @@
               </mat-error>
             </mat-form-field>
             <mat-form-field fxLayout="row wrap" class="is-light form-primary">
-              <mat-select placeholder="End KPS" formControlName="end_kps" [disabled]="!enableEdit">
+              <mat-select placeholder="End KPS" formControlName="end_kps">
+                <!-- [disabled]="!enableEdit"> -->
                 <mat-option *ngFor="let item of KPSList" [value]="item.id">{{item.kps_number}} ({{item.end_date  | date:'dd/MM/yyyy'}})
                 </mat-option>
               </mat-select>
@@ -32,16 +35,17 @@
                 End KPS harus diisi
               </mat-error>
             </mat-form-field>
-            <div fxLayout="row" *ngIf="enableEdit">
+            <div fxLayout="row">
+            <!-- <div fxLayout="row" *ngIf="enableEdit"> -->
               <h3>
                 <mat-slide-toggle formControlName="status">
                   Status
                 </mat-slide-toggle>
               </h3>
             </div>
-            <div fxLayout="row" *ngIf="!enableEdit">
+            <!-- <div fxLayout="row" *ngIf="!enableEdit">
               <h3>Status: <span class="text-boxed mat-green-700-bg">active</span></h3>
-            </div>
+            </div> -->
             <div class="table-wrapper" *ngIf="existingAreas && existingAreas.length > 0">
               <div fxLayout="row" fxLayoutAlign="space-between center" class="top-table">
                 <h3 class="pl-8">Existing Areas</h3>
@@ -60,7 +64,9 @@
                     <span class="row-code" >{{row.code}}</span>
                   </ng-template>
                 </ngx-datatable-column>
-                <ngx-datatable-column *ngIf="enableEdit" [width]="98" name="Tindakan" headerClass="textright" [sortable]="false">
+                <!-- <ngx-datatable-column *ngIf="enableEdit" -->
+                <ngx-datatable-column
+                  [width]="98" name="Tindakan" headerClass="textright" [sortable]="false">
                   <ng-template ngx-datatable-cell-template let-row="row" let-value="value"
                     style="justify-content: center !important">
                     <div class="button-row" style="margin-left: -10px">
@@ -72,8 +78,10 @@
                 </ngx-datatable-column>
               </ngx-datatable>
             </div>
-            <h3 *ngIf="enableEdit && existingAreas && existingAreas.length > 0">Add Areas:</h3>
-            <form [formGroup]="formFilter" autoComplete="off" *ngIf="enableEdit">
+            <!-- <h3 *ngIf="enableEdit && existingAreas && existingAreas.length > 0">Add Areas:</h3> -->
+            <h3 *ngIf="existingAreas && existingAreas.length > 0">Add Areas:</h3>
+            <!-- <form [formGroup]="formFilter" autoComplete="off" *ngIf="enableEdit"> -->
+            <form [formGroup]="formFilter" autoComplete="off">
               <div
                 fxLayout="row wrap"
                 fxLayoutAlign="space-between stretch"
@@ -197,23 +205,27 @@
                   </div>
                   <div fxFlex="50" fxLayout="row wrap" fxLayoutAlign="end center"
                     fxLayout.lt-md="column" fxLayoutGap="10px" fxLayoutGap.lt-md="0px">
-                    <button *ngIf="enableEdit && i !== 0"
+                    <!-- <button *ngIf="enableEdit && i !== 0" -->
+                    <button *ngIf="i !== 0"
                       mat-raised-button color="primary" type="button"
                       (click)="moveUp(i)">
                       <mat-icon>arrow_upward</mat-icon>
                     </button>
-                    <button *ngIf="enableEdit && i !== (formKPI.get('kpis').value.length - 1)"
+                    <!-- <button *ngIf="enableEdit && i !== (formKPI.get('kpis').value.length - 1)" -->
+                    <button *ngIf="i !== (formKPI.get('kpis').value.length - 1)"
                       mat-raised-button color="primary" type="button"
                       (click)="moveDown(i)">
                       <mat-icon>arrow_downward</mat-icon>
                     </button>
+                    <!-- <button
+                      *ngIf="enableEdit && (formKPI.get('kpis').value.length === 1 || i === (formKPI.get('kpis').value.length - 1))" -->
                     <button
-                      *ngIf="enableEdit && (formKPI.get('kpis').value.length === 1 || i === (formKPI.get('kpis').value.length - 1))"
+                      *ngIf="(formKPI.get('kpis').value.length === 1 || i === (formKPI.get('kpis').value.length - 1))"
                       mat-raised-button type="button" (click)="addKPI()">
                       <mat-icon>add</mat-icon>
                     </button>
+                    <!-- <button mat-raised-button color="primary" type="button" *ngIf="enableEdit" -->
                     <button mat-raised-button color="primary" type="button"
-                      *ngIf="enableEdit"
                       (click)="deleteKPI(i)">
                       <mat-icon>delete</mat-icon>
                     </button>
@@ -221,7 +233,8 @@
                 </div>
                 <div class="pb-8 px-24">
                   <mat-form-field fxLayout="row wrap" class="is-light form-primary">
-                    <mat-select placeholder="Kategori KPI" formControlName="category" [disabled]="!enableEdit" (selectionChange)="resetKPIDetail(i)">
+                    <!-- <mat-select placeholder="Kategori KPI" formControlName="category" [disabled]="!enableEdit" (selectionChange)="resetKPIDetail(i)"> -->
+                    <mat-select placeholder="Kategori KPI" formControlName="category" (selectionChange)="resetKPIDetail(i)">
                       <mat-option *ngFor="let item of categories" [value]="item">{{item | toCapitalize}}
                       </mat-option>
                     </mat-select>
@@ -231,7 +244,8 @@
                   </mat-form-field>
                   <mat-form-field *ngIf="kpi.get('category').value == 'brand' || kpi.get('category').value == 'trade program'"
                     fxLayout="row wrap" class="is-light form-primary">
-                    <mat-select placeholder="Brand" formControlName="brand"[disabled]="!enableEdit">
+                    <!-- <mat-select placeholder="Brand" formControlName="brand" [disabled]="!enableEdit"> -->
+                    <mat-select placeholder="Brand" formControlName="brand">
                       <mat-option *ngFor="let item of brands" [value]="item.code">{{ item.code }}
                       </mat-option>
                     </mat-select>
@@ -241,11 +255,13 @@
                   </mat-form-field>
                   <mat-form-field *ngIf="kpi.get('category').value == 'brand' || kpi.get('category').value == 'trade program'"
                     fxLayout="row wrap" class="is-light form-primary">
-                    <mat-select *ngIf="kpi.get('category').value == 'brand'" [disabled]="!enableEdit" placeholder="Parameter" formControlName="parameter">
+                    <!-- <mat-select *ngIf="kpi.get('category').value == 'brand'" [disabled]="!enableEdit" placeholder="Parameter" formControlName="parameter"> -->
+                    <mat-select *ngIf="kpi.get('category').value == 'brand'" placeholder="Parameter" formControlName="parameter">
                       <mat-option *ngFor="let item of brand_parameters" [value]="item.parameter">{{ item.parameter }}
                       </mat-option>
                     </mat-select>
-                    <mat-select *ngIf="kpi.get('category').value == 'trade program'" [disabled]="!enableEdit" placeholder="Parameter" formControlName="parameter">
+                    <!-- <mat-select *ngIf="kpi.get('category').value == 'trade program'" [disabled]="!enableEdit" placeholder="Parameter" formControlName="parameter"> -->
+                    <mat-select *ngIf="kpi.get('category').value == 'trade program'" placeholder="Parameter" formControlName="parameter">
                       <mat-option *ngFor="let item of trade_program_objectives" [value]="item.objective_description">{{ item.objective_description }}
                       </mat-option>
                     </mat-select>
@@ -257,7 +273,8 @@
               </div>
             </div>
             <div class="confirm btn-confirm px-24 py-48" fxLayout="row" fxLayoutGap="25px">
-              <button mat-raised-button type="button" [disabled]="!enableEdit" class="confirmation-button" fxFlex="20" (click)="submit()">
+              <!-- <button mat-raised-button type="button" [disabled]="!enableEdit" class="confirmation-button" fxFlex="20" (click)="submit()"> -->
+              <button mat-raised-button type="button" class="confirmation-button" fxFlex="20" (click)="submit()">
                 SIMPAN
               </button>
             </div>
