--- a/src/app/pages/kpi-setting/component/list-kpi-groups.component.html
+++ b/src/app/pages/kpi-setting/component/list-kpi-groups.component.html
@@ -51,9 +51,9 @@
               <button mat-icon-button color="" (click)="edit(row)" [routerLink]="['/kpisetting/kpi-setting-edit/'+ row.id +'']">
                 <mat-icon class="secondary-text">edit</mat-icon>
               </button>
-              <button mat-icon-button color="" (click)="delete(row.id)">
+              <!-- <button mat-icon-button color="" (click)="delete(row.id)">
                 <mat-icon class="secondary-text">delete</mat-icon>
-              </button>
+              </button> -->
             </div>
           </ng-template>
         </ngx-datatable-column>
