fixing grouping pelanggan

--- a/src/app/pages/remote-call-activation/route-plan/route-plan.component.html
+++ b/src/app/pages/remote-call-activation/route-plan/route-plan.component.html
@@ -75,9 +75,9 @@
               </mat-progress-bar>
               <ngx-datatable class="material" style="border-top: 1px solid #e3e3e3" [rows]="rows"
                 [loadingIndicator]="loadingIndicator" [columnMode]="'force'" [headerHeight]="48" [footerHeight]="56"
-                [scrollbarH]="true" [offset]="offsetPagination" [reorderable]="reorderable" [count]="pagination.total"
-                [limit]="pagination.per_page" [externalPaging]="true" [externalSorting]="true" (page)="setPage($event)"
-                (sort)="onSort($event)">
+                [rowHeight]="auto" [scrollbarH]="true" [offset]="offsetPagination" [reorderable]="reorderable"
+                [count]="pagination.total" [limit]="pagination.per_page" [externalPaging]="true"
+                [externalSorting]="true" (page)="setPage($event)" (sort)="onSort($event)">
                 <ngx-datatable-column name="Hari Kunjungan" prop="kunjungan">
                   <ng-template ngx-datatable-cell-template let-value="value" let-row="row">
                     <span style="text-transform: capitalize;">{{row.kunjungan}}</span>
