--- a/src/app/pages/remote-call-activation/grouping-pelanggan/index/grouping-pelanggan-index.component.html
+++ b/src/app/pages/remote-call-activation/grouping-pelanggan/index/grouping-pelanggan-index.component.html
@@ -105,10 +105,16 @@
               </mat-progress-bar>
               <ngx-datatable class="material" style="border-top: 1px solid #e3e3e3" [rows]="rows"
                 [loadingIndicator]="loadingIndicator" [columnMode]="'force'" [headerHeight]="48" [footerHeight]="56"
-                [scrollbarH]="true" [offset]="offsetPagination" [reorderable]="reorderable" [count]="pagination.total"
-                [limit]="pagination.per_page" [externalPaging]="true" [externalSorting]="true" (page)="setPage($event)"
-                (sort)="onSort($event)">
+                [rowHeight]="auto" [scrollbarH]="true" [offset]="offsetPagination" [reorderable]="reorderable"
+                [count]="pagination.total" [limit]="pagination.per_page" [externalPaging]="true"
+                [externalSorting]="true" (page)="setPage($event)" (sort)="onSort($event)">
                 <ngx-datatable-column name="Position Code" prop="position_code" [sortable]="false">
+                  <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+                    <span></span>
+                    <a class="direct-edit" (click)="openDialogPositionCode(row)">{{ row.position_code ?
+                      row.position_code :
+                      'Kosong, Klik untuk merubah' }}</a>
+                  </ng-template>
                 </ngx-datatable-column>
                 <ngx-datatable-column name="Customer Name" prop="owner"></ngx-datatable-column>
                 <ngx-datatable-column name="Customer Code" prop="code" [sortable]="false"></ngx-datatable-column>
