--- a/src/app/pages/user-management/rca-agent/rca-agent.component.html
+++ b/src/app/pages/user-management/rca-agent/rca-agent.component.html
@@ -130,20 +130,20 @@
           </ng-template>
         </ngx-datatable-column>
 
-        <ngx-datatable-column [width]="98" name="Tindakan" headerClass="textright" [sortable]="false">
+        <!-- <ngx-datatable-column [width]="98" name="Tindakan" headerClass="textright" [sortable]="false">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value"
             style="justify-content: center !important">
             <div class="button-row" style="margin-left: -10px">
-              <!-- <button mat-icon-button *ngIf="permission?.ubah" color="" (click)="directEdit(row)">
+              <button mat-icon-button *ngIf="permission?.ubah" color="" (click)="directEdit(row)">
                 <mat-icon class="secondary-text">edit</mat-icon>
               </button>
               <button mat-icon-button color="primary" (click)="deleteFf(row.id)"
                 [ngStyle]="{'cursor': !permission?.hapus ? 'no-drop' : ''}" [disabled]="!permission?.hapus">
                 <mat-icon>delete</mat-icon>
-              </button> -->
+              </button>
             </div>
           </ng-template>
-        </ngx-datatable-column>
+        </ngx-datatable-column> -->
       </ngx-datatable>
     </div>
   </div>
