fixing error build

--- a/src/app/pages/remote-call-activation/position-code-dialog/position-code-dialog.component.html
+++ b/src/app/pages/remote-call-activation/position-code-dialog/position-code-dialog.component.html
@@ -18,6 +18,6 @@
   </div>
   <div class="button" fxLayout="row">
     <div (click)="submit()" fxFlex="50" class="positif-button">Simpan</div>
-    <div (click)="dialogRef.close()" fxFlex="50" class="negatif-button">Batal</div>
+    <div (click)="close()" fxFlex="50" class="negatif-button">Batal</div>
   </div>
 </div>
