--- a/src/app/pages/remote-call-activation/grouping-pelanggan/index/grouping-pelanggan-index.component.html
+++ b/src/app/pages/remote-call-activation/grouping-pelanggan/index/grouping-pelanggan-index.component.html
@@ -1,11 +1,11 @@
 <div class="page-layout simple fullwidth" #containerScroll fxLayout="column" fusePerfectScrollbar>
   <!-- HEADER -->
   <page-content-header [contentTitle]="'Grouping Pelanggan'">
-    <div class="confirm p-24" fxLayout="row" fxLayoutGap="20px">
+    <!-- <div class="confirm p-24" fxLayout="row" fxLayoutGap="20px">
       <button mat-raised-button type="button" class="confirmation-button" (click)="submit()" fxFlex="20">
         SIMPAN
       </button>
-    </div>
+    </div> -->
   </page-content-header>
   <!-- / HEADER -->
   <div class="content p-24">
@@ -110,7 +110,6 @@
                 [externalSorting]="true" (page)="setPage($event)" (sort)="onSort($event)">
                 <ngx-datatable-column name="Position Code" prop="position_code" [sortable]="false">
                   <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-                    <span></span>
                     <a class="direct-edit" (click)="openDialogPositionCode(row)">{{ row.position_code ?
                       row.position_code :
                       'Kosong, Klik untuk merubah' }}</a>
