--- a/src/app/pages/user-management/rca-agent/rca-agent.component.html
+++ b/src/app/pages/user-management/rca-agent/rca-agent.component.html
@@ -54,7 +54,7 @@
                 item.code}}</mat-option>
             </mat-select>
           </mat-form-field>
-          <mat-form-field fxFlex="12%" class="is-light form-primary">
+          <!-- <mat-form-field fxFlex="12%" class="is-light form-primary">
             <mat-select placeholder="Salespoint" formControlName="salespoint" multiple>
               <mat-option *ngFor="let item of filteringGeotree(list['salespoint'])" [value]="item.id">{{item.name ===
                 'all' ?
@@ -81,7 +81,7 @@
                 :
                 item.code}}</mat-option>
             </mat-select>
-          </mat-form-field>
+          </mat-form-field> -->
         </div>
         <div fxLayout="row wrap" fxLayout.lt-md="column" class="px-24 pt-16" fxLayoutGap="20px" fxLayoutGap.lt-md="0px"
           style="margin-bottom: 25px;">
