--- a/src/app/pages/user-management/rca-agent/create/rca-agent-create.component.html
+++ b/src/app/pages/user-management/rca-agent/create/rca-agent-create.component.html
@@ -60,7 +60,7 @@
               <mat-option *ngFor="let item of list['area']" [value]="item.id">{{item.name}}</mat-option>
             </mat-select>
           </mat-form-field>
-          <mat-form-field fxFlex="31%" class="is-light form-primary">
+          <!-- <mat-form-field fxFlex="31%" class="is-light form-primary">
             <mat-select placeholder="Salespoint" formControlName="salespoint"
               (selectionChange)="getAudienceArea('district', formRcaAgent.get('salespoint').value)">
               <mat-option *ngFor="let item of list['salespoint']" [value]="item.id">{{item.name}}</mat-option>
@@ -76,7 +76,7 @@
             <mat-select placeholder="Territory" formControlName="territory">
               <mat-option *ngFor="let item of list['territory']" [value]="item.id">{{item.name}}</mat-option>
             </mat-select>
-          </mat-form-field>
+          </mat-form-field> -->
         </div>
 
         <div fxLayout="column">
@@ -87,7 +87,7 @@
         </div>
         <div fxLayout="row" fxFlex="30">
           <mat-form-field fxFlex="100" class="is-light form-primary">
-            <mat-select placeholder="Existing" [formControl]="existingPositionCode"
+            <mat-select placeholder="Existing" formControlName="position"
               [disabled]="formRcaAgent.get('isNewPositionCode').value">
               <mat-option *ngFor="let item of listExistingPositionCodes" [value]=" item.code">{{item.code}}</mat-option>
             </mat-select>
