fixing error build

--- a/src/app/pages/remote-call-activation/grouping-pelanggan-import-dialog/grouping-pelanggan-import-dialog.component.html
+++ b/src/app/pages/remote-call-activation/grouping-pelanggan-import-dialog/grouping-pelanggan-import-dialog.component.html
@@ -10,7 +10,7 @@
 
     </div>
     <!-- CLOSE DIALOG BUTTON -->
-    <button mat-icon-button (click)="dialogRef.close()" aria-label="Close Dialog" [disabled]="uploading">
+    <button mat-icon-button (click)="dialogRef.close()" aria-label="Close Dialog">
       <mat-icon>close</mat-icon>
     </button>
     <!-- / CLOSE DIALOG BUTTON -->
