add filter position and classification in grouping pelanggan

--- a/src/app/pages/remote-call-activation/grouping-pelanggan/index/grouping-pelanggan-index.component.html
+++ b/src/app/pages/remote-call-activation/grouping-pelanggan/index/grouping-pelanggan-index.component.html
@@ -76,6 +76,7 @@
                       item.code}}</mat-option>
                   </mat-select>
                 </mat-form-field>
+
                 <!-- <mat-form-field fxFlex="12%" class="is-light form-primary">
                   <mat-select placeholder="Salespoint" formControlName="salespoint" multiple>
                     <mat-option *ngFor="let item of filteringGeotree(list['salespoint'])" [value]="item.id">{{item.name
@@ -109,6 +110,25 @@
                 </mat-form-field> -->
               </div>
             </form>
+            <div fxLayout="row" fxFlex="20" class="p-24">
+              <mat-form-field fxFlex="12%" class="is-light form-primary">
+                <mat-select placeholder="Position Code" [formControl]="positionCode" #singleSelect>
+                  <ngx-mat-select-search [formControl]="filterPosition" [placeholderLabel]="'Cari Position Code...'"
+                    [noEntriesFoundLabel]="'Tidak ada Position Code yang ditemukan'" [clearSearchInput]="false">
+                  </ngx-mat-select-search>
+                  <mat-option>None</mat-option>
+                  <mat-option *ngFor="let item of filteredPosition | async" [value]="item.id">
+                    {{item.code}}
+                  </mat-option>
+                </mat-select>
+              </mat-form-field>
+              <div flex="1"></div>
+              <mat-form-field fxFlex="12%" class="is-light form-primary">
+                <mat-select placeholder="Clasification" [formControl]="classification">
+                  <mat-option *ngFor="let item of listClasification" [value]="item.value">{{item.name}}</mat-option>
+                </mat-select>
+              </mat-form-field>
+            </div>
             <div class="p-0">
               <mat-progress-bar [color]="'primary'" [mode]="'indeterminate'" *ngIf="loadingIndicator">
               </mat-progress-bar>
