--- a/src/app/pages/inapp-marketing/banner/create/banner-create.component.html
+++ b/src/app/pages/inapp-marketing/banner/create/banner-create.component.html
@@ -451,13 +451,18 @@
               <mat-radio-button class="radio-button" value="no">Tidak</mat-radio-button>
             </mat-radio-group>
           </div>
-          <div fxLayout="row" class="pb-24 px-24">
+          <div fxLayout="row" fxLayoutGap="24px" class="pb-24 px-24">
             <mat-checkbox class="mt-4 ml-4 mb-8" (change)="isTargetAudience($event)"
               formControlName="is_target_audience">Target Audience</mat-checkbox>
+            <mat-checkbox *ngIf="formBannerGroup.get('user_group').value === 'customer'" class="mt-4 ml-4 mb-8" (change)="isTargetArea($event)"
+              formControlName="is_target_area">Target Area</mat-checkbox>
           </div>
+          <ng-container *ngIf="formBannerGroup.get('is_target_area').value === true">
+            <target-area (selectedArea)="getSelectedArea($event)" (selectedAll)="getSelectedAll($event)" (selectedAllId)="getSelectedAllId($event)"></target-area>
+          </ng-container>
           <div [formGroup]="formFilter" *ngIf="formBannerGroup.get('is_target_audience').value === true">
-            <div fxLayout="row wrap" fxLayoutAlign="space-between stretch" fxLayout.lt-md="column" class="pt-16"
-              fxLayoutGap="20px" fxLayoutGap.lt-md="0px" style="margin-left: 25px; margin-right: 25px;">
+            <div fxLayout="row wrap" fxLayoutAlign="space-between stretch" fxLayout.lt-md="column" class="px-24"
+                fxLayoutGap="20px" fxLayoutGap.lt-md="0px">
               <mat-form-field fxFlex="12%" class="is-light form-primary">
                 <mat-select placeholder="National" formControlName="national">
                   <mat-option *ngFor="let item of listLevelArea" [value]="item.id">{{item.name}}</mat-option>
@@ -564,7 +569,7 @@
             </ngx-datatable>
           </div>
 
-          <div *ngIf="formBannerGroup.get('is_target_audience').value === false">
+          <div *ngIf="formBannerGroup.get('is_target_audience').value === false && formBannerGroup.get('is_target_area').value === false">
             <div class="" formArrayName="areas"
               *ngFor="let wil of formBannerGroup.get('areas')['controls']; let i = index;">
               <div [formGroupName]="i">
